--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,16 @@
  table {
    margin: auto;
  }
+
+ table,th {
+    border-radius: 10px;
+ }
  h1, h2,h3 {
   text-align: center;
   color: green;
+ }
+ th {
+	padding: 10px;
  }
 </style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
