--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+ <meta name="description" content="AP EAMCET MOCK COUNSELLING 2021">
+  <meta name="keywords" content="EAMCET, EAPCET, EAMCET2021, EAPCET2021, MOCK COUNSELLING 2021, AP MOCK COUNSELLING 2021">
 <style>
  #college_table ,  #college_table  th,#college_table  tr  {
   border: 2px solid; 
