--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     </tr>
 	<tr>
       <th>
-    	<label for="lessCollegeFee">College Fee Less than <label> 
+    	<label for="lessCollegeFee">College Fee Less than(<=) <label> 
       </th>
       <td> 
          <input id="lessCollegeFee" class='form-control' name="lessCollegeFee" type="number"  value="">
