--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     </tr>
 	<tr>
       <th>
-    	<label for="lessCollegeFee">College Fee Less than(<=) <label> 
+    	<label for="lessCollegeFee">College Fee Less than(&lt;=) <label> 
       </th>
       <td> 
          <input id="lessCollegeFee" class='form-control' name="lessCollegeFee" type="number"  value="">
@@ -49,7 +49,7 @@
     </tr>
     <tr>
       <th>
-    	<label for="greaterCollegeFee">College Greater than (>=) <label> 
+    	<label for="greaterCollegeFee">College Greater than (&gt;=) <label> 
       </th>
       <td> 
          <input id="greaterCollegeFee"  class='form-control' name="greaterCollegeFee" type="number"  value="">
