--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,33 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, intial-scale=1.0">
  <meta name="description" content="AP EAMCET MOCK COUNSELLING 2021">
   <meta name="keywords" content="EAMCET, EAPCET, EAMCET2021, EAPCET2021, MOCK COUNSELLING 2021, AP MOCK COUNSELLING 2021">
 <style>
+#college {
+    width: 70%;
+}
+#top {
+text-align: center;
+}
+section {
+ text-align: center;
+}
+#searchLink {
+    position: fixed;
+    top: 90%;
+    left: 0px;
+    right: 0px;
+    width: 180px;
+    text-decoration: none;
+    padding: 7px;
+    background: white;
+    font-size: 2rem;
+    border: 2px solid black;
+    display: inline-block;
+    border-radius: 30px;
+    margin: 0 auto;
+}
  #college_table ,  #college_table  th,#college_table  tr  {
   border: 2px solid; 
  }
@@ -44,8 +69,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
- <h3> AP EAMCET MOCK COUNSELLING 2021 </h3>
- <section>
+<section>
+ <h3 id="top"> AP EAMCET MOCK COUNSELLING 2021 </h3>
+ <a id="searchLink" href="#top"> GoTo Search </a> 
+
   <table class="selections">
     <tr>
       <th>
