--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@ section {
  text-align: center;
 }
 #searchLink {
-    position: fixed;
-    top: 90%;
+      position: fixed;
     left: 0px;
+    bottom: 0px;
     right: 0px;
-    width: 180px;
+    width: 120px;
     text-decoration: none;
-    padding: 7px;
+    padding: 3px;
     background: white;
-    font-size: 2rem;
+    font-size: 1rem;
     border: 2px solid black;
     display: inline-block;
     border-radius: 30px;
